Add bbm to tex template

--- a/tex/texmf/tex/latex/andrew/andrew.sty
+++ b/tex/texmf/tex/latex/andrew/andrew.sty
@@ -1,5 +1,5 @@
 \ProvidesPackage{andrew}
-\usepackage{amsmath,amssymb,amsthm,amsfonts,bm}
+\usepackage{amsmath,amssymb,amsthm,amsfonts,bm,bbm}
 %\usepackage{titling}
 \usepackage{fancyhdr,extramarks,lastpage}
 \usepackage{url}
