[tex] Update my sty file: algorithm and more script letters

--- a/tex/texmf/tex/latex/andrew/andrew.sty
+++ b/tex/texmf/tex/latex/andrew/andrew.sty
@@ -14,6 +14,8 @@
 \usepackage{nicefrac,units,siunitx}
 \usepackage[version=3]{mhchem}
 \usepackage{mathrsfs,mathtools,xparse}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 \usepackage{listings}
 \usepackage{todonotes}
 
@@ -41,49 +43,147 @@
 
 \def\ZZ{\mathbb{Z}}
 \def\RR{\mathbb{R}}
+\def\CC{\mathbb{C}}
 \def\QQ{\mathbb{Q}}
 \def\FF{\mathbb{F}}
 \def\NN{\mathbb{N}}
 
 % Calligraphic and blackboard type letters.
 
-\def\cA{{\cal A}}
-\def\cB{{\cal B}}
-\def\cC{{\cal C}}
-\def\cD{{\cal D}}
-\def\cE{{\cal E}}
-\def\cF{{\cal F}}
-\def\cG{{\cal G}}
-\def\cH{{\cal H}}
-\def\cI{{\cal I}}
-\def\cJ{{\cal J}}
-\def\cK{{\cal K}}
-\def\cL{{\cal L}}
-\def\cM{{\cal M}}
-\def\cN{{\cal N}}
-\def\cO{{\cal O}}
-\def\cP{{\cal P}}
-\def\cQ{{\cal Q}}
-\def\cR{{\cal R}}
-\def\cS{{\cal S}}
-\def\cT{{\cal T}}
-\def\cU{{\cal U}}
-\def\cV{{\cal V}}
-\def\cW{{\cal W}}
-\def\cX{{\cal X}}
-\def\cY{{\cal Y}}
-\def\cZ{{\cal Z}}
+\def\vA{{\vec A}}
+\def\vB{{\vec B}}
+\def\vC{{\vec C}}
+\def\vD{{\vec D}}
+\def\vE{{\vec E}}
+\def\vF{{\vec F}}
+\def\vG{{\vec G}}
+\def\vH{{\vec H}}
+\def\vI{{\vec I}}
+\def\vJ{{\vec J}}
+\def\vK{{\vec K}}
+\def\vL{{\vec L}}
+\def\vM{{\vec M}}
+\def\vN{{\vec N}}
+\def\vO{{\vec O}}
+\def\vP{{\vec P}}
+\def\vQ{{\vec Q}}
+\def\vR{{\vec R}}
+\def\vS{{\vec S}}
+\def\vT{{\vec T}}
+\def\vU{{\vec U}}
+\def\vV{{\vec V}}
+\def\vW{{\vec W}}
+\def\vX{{\vec X}}
+\def\vY{{\vec Y}}
+\def\vZ{{\vec Z}}
+%%%%%%%%%%%
+\def\bA{{\mathbf A}}
+\def\bB{{\mathbf B}}
+\def\bC{{\mathbf C}}
+\def\bD{{\mathbf D}}
+\def\bE{{\mathbf E}}
+\def\bF{{\mathbf F}}
+\def\bG{{\mathbf G}}
+\def\bH{{\mathbf H}}
+\def\bI{{\mathbf I}}
+\def\bJ{{\mathbf J}}
+\def\bK{{\mathbf K}}
+\def\bL{{\mathbf L}}
+\def\bM{{\mathbf M}}
+\def\bN{{\mathbf N}}
+\def\bO{{\mathbf O}}
+\def\bP{{\mathbf P}}
+\def\bQ{{\mathbf Q}}
+\def\bR{{\mathbf R}}
+\def\bS{{\mathbf S}}
+\def\bT{{\mathbf T}}
+\def\bU{{\mathbf U}}
+\def\bV{{\mathbf V}}
+\def\bW{{\mathbf W}}
+\def\bX{{\mathbf X}}
+\def\bY{{\mathbf Y}}
+\def\bZ{{\mathbf Z}}
+%%%%%%%%%%%%%%
+\def\cA{{\mathcal A}}
+\def\cB{{\mathcal B}}
+\def\cC{{\mathcal C}}
+\def\cD{{\mathcal D}}
+\def\cE{{\mathcal E}}
+\def\cF{{\mathcal F}}
+\def\cG{{\mathcal G}}
+\def\cH{{\mathcal H}}
+\def\cI{{\mathcal I}}
+\def\cJ{{\mathcal J}}
+\def\cK{{\mathcal K}}
+\def\cL{{\mathcal L}}
+\def\cM{{\mathcal M}}
+\def\cN{{\mathcal N}}
+\def\cO{{\mathcal O}}
+\def\cP{{\mathcal P}}
+\def\cQ{{\mathcal Q}}
+\def\cR{{\mathcal R}}
+\def\cS{{\mathcal S}}
+\def\cT{{\mathcal T}}
+\def\cU{{\mathcal U}}
+\def\cV{{\mathcal V}}
+\def\cW{{\mathcal W}}
+\def\cX{{\mathcal X}}
+\def\cY{{\mathcal Y}}
+\def\cZ{{\mathcal Z}}
 %%%%%%%%%%%%%%%%%
+\def\bbA{{\mathbb A}}
+\def\bbB{{\mathbb B}}
 \def\bbC{{\mathbb C}}
+\def\bbD{{\mathbb D}}
 \def\bbE{{\mathbb E}}
 \def\bbF{{\mathbb F}}
 \def\bbG{{\mathbb G}}
+\def\bbH{{\mathbb H}}
+\def\bbI{{\mathbb I}}
+\def\bbJ{{\mathbb J}}
+\def\bbK{{\mathbb K}}
+\def\bbL{{\mathbb L}}
 \def\bbM{{\mathbb M}}
 \def\bbN{{\mathbb N}}
+\def\bbO{{\mathbb O}}
+\def\bbP{{\mathbb P}}
 \def\bbQ{{\mathbb Q}}
 \def\bbR{{\mathbb R}}
+\def\bbS{{\mathbb S}}
+\def\bbT{{\mathbb T}}
+\def\bbU{{\mathbb U}}
 \def\bbV{{\mathbb V}}
+\def\bbW{{\mathbb W}}
+\def\bbX{{\mathbb X}}
+\def\bbY{{\mathbb Y}}
 \def\bbZ{{\mathbb Z}}
+%%%%%%%%%%%
+\def\fA{{\mathfrak A}}
+\def\fB{{\mathfrak B}}
+\def\fC{{\mathfrak C}}
+\def\fD{{\mathfrak D}}
+\def\fE{{\mathfrak E}}
+\def\fF{{\mathfrak F}}
+\def\fG{{\mathfrak G}}
+\def\fH{{\mathfrak H}}
+\def\fI{{\mathfrak I}}
+\def\fJ{{\mathfrak J}}
+\def\fK{{\mathfrak K}}
+\def\fL{{\mathfrak L}}
+\def\fM{{\mathfrak M}}
+\def\fN{{\mathfrak N}}
+\def\fO{{\mathfrak O}}
+\def\fP{{\mathfrak P}}
+\def\fQ{{\mathfrak Q}}
+\def\fR{{\mathfrak R}}
+\def\fS{{\mathfrak S}}
+\def\fT{{\mathfrak T}}
+\def\fU{{\mathfrak U}}
+\def\fV{{\mathfrak V}}
+\def\fW{{\mathfrak W}}
+\def\fX{{\mathfrak X}}
+\def\fY{{\mathfrak Y}}
+\def\fZ{{\mathfrak Z}}
 
 % bold vectors
 \newcommand{\vect}[1]{\mathbf{#1}}
@@ -115,6 +215,7 @@
 \def\round{\@ifstar{\oldround}{\oldround*}}
 \makeatother
 
+\def\multiset#1#2{\ensuremath{\left(\kern-.3em\left(\genfrac{}{}{0pt}{}{#1}{#2}\right)\kern-.3em\right)}}
 
 % Probability
 \DeclareMathOperator*{\EV}{\mathbb{E}}
@@ -123,6 +224,17 @@
 \DeclareMathOperator*{\Var}{Var}
 \DeclareMathOperator*{\Cov}{Cov}
 \DeclareMathOperator*{\Bias}{Bias}
+
+\DeclareMathOperator{\Tr}{Tr}
+\DeclareMathOperator{\tr}{tr}
+
+\DeclareMathOperator{\Det}{Det}
+%\DeclareMathOperator{\det}{det}
+
+\DeclareMathOperator{\Rank}{Rank}
+\DeclareMathOperator{\rank}{rank}
+\DeclareMathOperator{\rk}{rk}
+\DeclareMathOperator{\rnk}{rnk}
 
 % Theorems
 %%%%%%%%%%
@@ -141,8 +253,8 @@
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem*{corollary*}{Corollary}
 
-\newtheorem{algorithm}[theorem]{Algorithm}
-\newtheorem*{algorithm*}{Algorithm}
+\newtheorem{algothm}[theorem]{Algorithm}
+\newtheorem*{algothm*}{Algorithm}
 
 \newtheorem{observation}[theorem]{Observation}
 \newtheorem*{observation*}{Observation}
