[tex] Update template a little

--- a/tex/texmf/tex/latex/andrew/andrew.sty
+++ b/tex/texmf/tex/latex/andrew/andrew.sty
@@ -24,7 +24,7 @@
 \cfoot{\courseNumber: \handoutName \ ---\ Page \thepage~of~\pageref{LastPage}}
 
 \title{
-	\textmd{\textbf{\courseName:\ \handoutName}}\\
+	\textmd{\textbf{\courseName\\\handoutName}}\\
 	\vspace{0.1in}\large{\textit{\professor,\ \term}}
 }
 
