[tex] Update templates

--- a/tex/texmf/tex/latex/andrew/andrewsym-beamer.sty
+++ b/tex/texmf/tex/latex/andrew/andrewsym-beamer.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{andrewsym}
+\ProvidesPackage{andrewsym-beamer}
 \usepackage{amsmath,amssymb,amsthm,amsfonts,bm,bbm}
 %\usepackage{complexity}
 \usepackage{etoolbox}
@@ -6,7 +6,7 @@
 \usepackage{float}
 \usepackage{tikz}
 \usepackage{verbatim}
-\usepackage{enumitem}
+%\usepackage{enumitem}
 \usepackage{nicefrac,units,siunitx}
 \usepackage[version=3]{mhchem}
 \usepackage{mathrsfs,mathtools,xparse}
@@ -262,58 +262,58 @@
 % Theorems
 %%%%%%%%%%
 
-\theoremstyle{plain}
+%\theoremstyle{plain}
 
-\newtheorem{theorem}{Theorem}
-\newtheorem*{theorem*}{Theorem}
+%\newtheorem{theorem}{Theorem}
+%\newtheorem*{theorem*}{Theorem}
 
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem*{lemma*}{Lemma}
+%\newtheorem{lemma}[theorem]{Lemma}
+%\newtheorem*{lemma*}{Lemma}
 
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem*{proposition*}{Proposition}
+%\newtheorem{proposition}[theorem]{Proposition}
+%\newtheorem*{proposition*}{Proposition}
 
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem*{corollary*}{Corollary}
+%\newtheorem{corollary}[theorem]{Corollary}
+%\newtheorem*{corollary*}{Corollary}
 
-\newtheorem{algothm}[theorem]{Algorithm}
-\newtheorem*{algothm*}{Algorithm}
+%\newtheorem{algothm}[theorem]{Algorithm}
+%\newtheorem*{algothm*}{Algorithm}
 
-\newtheorem{observation}[theorem]{Observation}
-\newtheorem*{observation*}{Observation}
+%\newtheorem{observation}[theorem]{Observation}
+%\newtheorem*{observation*}{Observation}
 
-\theoremstyle{definition}
+%\theoremstyle{definition}
 
-\newtheorem{claim}[theorem]{Claim}
-\newtheorem*{claim*}{Claim}
+%\newtheorem{claim}[theorem]{Claim}
+%\newtheorem*{claim*}{Claim}
 
-\newtheorem{conjecture}[theorem]{Conjecture}
-\newtheorem*{conjecture*}{Conjecture}
+%\newtheorem{conjecture}[theorem]{Conjecture}
+%\newtheorem*{conjecture*}{Conjecture}
 
-\newtheorem{definition}[theorem]{Definition}
-\newtheorem*{definition*}{Definition}
+%\newtheorem{definition}[theorem]{Definition}
+%\newtheorem*{definition*}{Definition}
 
-\newtheorem{fact}[theorem]{Fact}
-\newtheorem*{fact*}{Fact}
+%\newtheorem{fact}[theorem]{Fact}
+%\newtheorem*{fact*}{Fact}
 
-\newtheorem{case}[theorem]{Case}
-\newtheorem*{case*}{Case}
+%\newtheorem{case}[theorem]{Case}
+%\newtheorem*{case*}{Case}
 
-\newtheorem{example}[theorem]{Example}
-\newtheorem*{example*}{Example}
+%\newtheorem{example}[theorem]{Example}
+%\newtheorem*{example*}{Example}
 
-\newtheorem{assumption}[theorem]{Assumption}
-\newtheorem*{assumption*}{Assumption}
+%\newtheorem{assumption}[theorem]{Assumption}
+%\newtheorem*{assumption*}{Assumption}
 
-% Remark-style theorems
+%% Remark-style theorems
 
-\theoremstyle{remark}
+%\theoremstyle{remark}
 
-\newtheorem{note}[theorem]{Note}
-\newtheorem*{note*}{Note}
+%\newtheorem{note}[theorem]{Note}
+%\newtheorem*{note*}{Note}
 
-\newtheorem{remark}[theorem]{Remark}
-\newtheorem*{remark*}{Remark}
+%\newtheorem{remark}[theorem]{Remark}
+%\newtheorem*{remark*}{Remark}
 
 
 % Subproof with shaded square, subsubproof with //
